Bug 318937 - "More Options" button should be "Fewer Options"
Summary: "More Options" button should be "Fewer Options"
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: search (other bugs)
Version First Reported In: 2.2
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-26 16:10 UTC by Paul Worrall
Modified: 2013-04-27 17:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2013-04-26 16:10:25 UTC
When using "Find" in Dolphin and selecting "More Options" the button changes to "Less Options".  This is bad grammar in English, it should be "Fewer Options"

Reproducible: Always
Comment 1 Frank Reininghaus 2013-04-27 17:06:32 UTC
Thanks for the bug report. I'll change it for Dolphin 2.3/KDE 4.11.
Comment 2 Frank Reininghaus 2013-04-27 17:15:22 UTC
Git commit d819fd1498764c87cb3ba62af8717e0bdbe85f23 by Frank Reininghaus.
Committed on 27/04/2013 at 19:09.
Pushed by freininghaus into branch 'master'.

Replace the button label "Less Options" by "Fewer Options"

FIXED-IN: 4.11.0

M  +1    -1    dolphin/src/search/dolphinsearchbox.cpp

http://commits.kde.org/kde-baseapps/d819fd1498764c87cb3ba62af8717e0bdbe85f23