Replace the button label "Less Options" by "Fewer Options"

BUG: 318937

FIXED-IN: 4.11.0